// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--bottom"
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--bottom"
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 3`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--bottom custom-class-name"
    style="background-color: orange;"
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 4`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--top"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 5`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--right rmd-visual-media-overlay--horizontal"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 6`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--bottom"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 7`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--left rmd-visual-media-overlay--horizontal"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 8`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--middle"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 9`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--center rmd-visual-media-overlay--horizontal"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay should apply the correct styling, HTML attributes, and allow a ref 10`] = `
<div>
  <span
    class="rmd-visual-media-overlay rmd-visual-media-overlay--absolute-center rmd-visual-media-overlay--horizontal"
    style=""
  >
    <h5
      class="rmd-typography rmd-typography--headline-5 rmd-typography--no-margin"
    >
      Some description
    </h5>
  </span>
</div>
`;

exports[`VisualMediaOverlay style utility function should be callable without any arguments 1`] = `"rmd-visual-media-overlay rmd-visual-media-overlay--bottom"`;
